# Synixe

./: .gitignore  hemtt.json  hemtt.toml  mod.cpp
.github/workflows/: main.yml  sqflint.yml
.hemtt/: base.toml
addons/cba_settings_userconfig/: cba_settings.sqf
addons/clean/: $PBOPREFIX$  CfgWorlds.hpp  config.cpp  script_component.ht.hpp
addons/common/: $PBOPREFIX$  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp  stringtable.xml
addons/difficulty/: $PBOPREFIX$  CfgAILevelPresets.hpp  CfgDifficultyPresets.hpp  config.cpp  script_component.hpp
addons/editor/: $PBOPREFIX$  CfgEventHandlers.hpp  XEH_PREP.hpp  XEH_preInit.sqf  config.cpp  display3DEN.hpp  script_component.hpp
addons/factions/: $PBOPREFIX$  CfgFactionClasses.hpp  config.cpp  script_component.hpp
addons/fireteams/: $PBOPREFIX$  XEH_PREP.hpp  XEH_postInit.sqf  config.cpp  script_component.hpp
addons/freestyle/: $PBOPREFIX$  CfgLimitedArsenal.hpp  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/friendly_tracker/: $PBOPREFIX$  script_component.hpp  stringtable.xml
addons/insignia/: $PBOPREFIX$  CfgEventHandlers.hpp  CfgUnitInsignia.hpp  config.cpp  script_component.hpp
addons/itc_land_veh_darter/: $PBOPREFIX$  BIS_AddonInfo.hpp  CfgFunctions.hpp  CfgVehicles.hpp  CfgWeapons.hpp  RscInGameUI.hpp  config.cpp
addons/loadouts/: $PBOPREFIX$  CfgLoadouts.hpp  XEH_PREP.hpp  XEH_postInit.sqf  config.cpp  script_component.hpp
addons/main/: $PBOPREFIX$  CfgUnitInsignia.hpp  CfgVehicles.hpp  config.cpp  script_component.hpp  script_macros.hpp  script_mod.hpp  script_version.hpp
addons/maps/: $PBOPREFIX$  CfgWeapons.hpp  config.cpp  script_component.hpp
addons/pmc/: $PBOPREFIX$  (+6 more)
ci/: download.ps1
extension/: Cargo.toml
extension/src/: lib.rs
keys/: synixe.bikey
pmc/: Cargo.toml
(+200 files in other folders)
