[package]
name = "synixe_extension"
version = "0.1.0"
authors = ["Brett <brett@bmandesigns.com>"]
edition = "2018"

[lib]
name = "synixe"
crate-type = ["cdylib"]

[dependencies]
arma-rs = { path = "C:\\Users\\Brett\\Documents\\GitHub\\arma-rs\\arma-rs", branch = "macros" }
arma-rs-macros = { path = "C:\\Users\\Brett\\Documents\\GitHub\\arma-rs\\arma-rs-macros", branch = "macros" }
lazy_static = "1.3"
enigo = "0.0.13"
discord-rpc-sdk = { git = "https://github.com/Delta-Psi/rust-discord-rpc", branch = "master" }
webbrowser = "0.5"
libc = "0.2"
reqwest = {version = "0.10", features = ["json", "blocking"] }
